Finished changing the directory structure

--- a/app.yaml
+++ b/app.yaml
@@ -1,16 +1,16 @@
 api_version: 1
 application: learnucbugg
 handlers:
-- static_dir: static/ma
+- static_dir: ucbugg/static/ma
   url: /ma
 - expiration: 90d
-  static_dir: static/css
+  static_dir: ucbugg/static/css
   url: /css
 - expiration: 90d
-  static_dir: static/images
+  static_dir: ucbugg/static/images
   url: /images
 - expiration: 90d
-  static_dir: static/js
+  static_dir: ucbugg/static/js
   url: /js
 - script: main.py
   url: /.*
